--- a/_config.yml
+++ b/_config.yml
@@ -12,7 +12,7 @@ tagline: ""
 description: "Follow <a href=\"https://micro.blog/adamprocter\">@adamprocter on Micro.blog</a>."
 credits: "Follow <a href=\"https://micro.blog/adamprocter\">@adamprocter on Micro.blog</a>."
 baseurl: ""
-url: "http://discursive.adamprocter.co.uk"
+url: "https://discursive.adamprocter.co.uk"
 markdown: "kramdown"
 username: "adamprocter"
 permalink: "/:year/:month/:day/:title.html"
